Order Page near finalization

--- a/order.html
+++ b/order.html
@@ -43,7 +43,7 @@
         <div class="cupcake-price">$3.75</div>
       </div>
       <div class="cupcake-order-box">
-        <div class="select-block">
+        <div class="select-block select-size">
           <h3>Select Size</h3>
           <div class="select-options">
             <div class="options-row">
@@ -53,7 +53,7 @@
             </div>
           </div>
         </div>
-        <div class="select-block">
+        <div class="select-block select-frosting">
           <h3>Select Frosting Type</h3>
           <div class="select-options">
             <div class="options-row">
@@ -63,7 +63,7 @@
             </div>
           </div>
         </div>
-        <div class="select-block">
+        <div class="select-block select-topper">
           <h3>Select Topper</h3>
           <div class="select-options">
             <div class="options-row">
@@ -77,7 +77,11 @@
           <h3>No. of Candles</h3>
           <div class="select-options">
             <div class="options-row">
-              <button>User Input</button>
+              <input
+                type="number"
+                id="candlesQuantity"
+                placeholder="Enter quantity"
+              />
             </div>
           </div>
         </div>
