--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="index.js"></script>
+
     <title>Assignment 1</title>
   </head>
   <body>
@@ -49,7 +49,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Caramel-Cupcake.jpeg" />
+            <img src="img/Caramel-Cupcake.jpeg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">5.0</span>
               <span class="star-icon">&#9733;</span>
@@ -73,7 +73,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Vanilla-Cupcake.webp" />
+            <img src="img/Vanilla-Cupcake.webp" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.9</span>
               <span class="star-icon">&#9733;</span>
@@ -97,7 +97,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Velvet-Cupcake.jpg" />
+            <img src="img/Velvet-Cupcake.jpg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.8</span>
               <span class="star-icon">&#9733;</span>
@@ -121,7 +121,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Oreo-Cupcake.webp" />
+            <img src="img/Oreo-Cupcake.webp:" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.8</span>
               <span class="star-icon">&#9733;</span>
@@ -215,5 +215,6 @@
         </div>
       </div>
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
