--- a/order.html
+++ b/order.html
@@ -31,7 +31,7 @@
     <div class="big-container">
       <div class="cupcake-container">
         <div class="inside-image">
-          <img src="img/Caramel-Cupcake.jpeg" />
+          <img src="" alt="Cupcake Image" />
           <div class="cupcake-details">
             <div class="rating">
               <span class="rating-text"></span>
