--- a/cupcake.html
+++ b/cupcake.html
@@ -49,7 +49,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Caramel-Cupcake.jpeg" />
+            <img src="img/Caramel-Cupcake.jpeg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">5.0</span>
               <span class="star-icon">&#9733;</span>
@@ -73,7 +73,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Vanilla-Cupcake.webp" />
+            <img src="img/Vanilla-Cupcake.webp" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.9</span>
               <span class="star-icon">&#9733;</span>
@@ -97,7 +97,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Velvet-Cupcake.jpg" />
+            <img src="img/Velvet-Cupcake.jpg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.8</span>
               <span class="star-icon">&#9733;</span>
@@ -121,7 +121,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Oreo-Cupcake.webp" />
+            <img src="img/Oreo-Cupcake.webp" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.8</span>
               <span class="star-icon">&#9733;</span>
@@ -147,7 +147,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/S'Mores-Cupcake.jpg" />
+            <img src="img/S'Mores-Cupcake.jpg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.7</span>
               <span class="star-icon">&#9733;</span>
@@ -171,7 +171,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Chocolate-Cupcake.jpg" />
+            <img src="img/Chocolate-Cupcake.jpg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.7</span>
               <span class="star-icon">&#9733;</span>
@@ -195,7 +195,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Strawberry-Cupcake.jpg" />
+            <img src="img/Strawberry-Cupcake.jpg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.6 </span>
               <span class="star-icon">&#9733;</span>
@@ -219,7 +219,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Espresso-Cupcake.jpeg" />
+            <img src="img/Espresso-Cupcake.jpeg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.8</span>
               <span class="star-icon">&#9733;</span>
@@ -245,7 +245,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/SaltedCaramel-Cupcake.jpg" />
+            <img src="img/SaltedCaramel-Cupcake.jpg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.7</span>
               <span class="star-icon">&#9733;</span>
@@ -269,7 +269,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Blueberry-Cupcake.jpg" />
+            <img src="img/Blueberry-Cupcake.jpg" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.5</span>
               <span class="star-icon">&#9733;</span>
@@ -293,7 +293,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Coconut-Cupcake.webp" />
+            <img src="img/Coconut-Cupcake.webp" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.4</span>
               <span class="star-icon">&#9733;</span>
@@ -317,7 +317,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Lemon-Cupcake.avif" />
+            <img src="img/Lemon-Cupcake.avif" alt="Cupcake Image" />
             <div class="rating">
               <span class="rating-text">4.6</span>
               <span class="star-icon">&#9733;</span>
