--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Caramel-Cupcake.jpeg" alt="Cupcake Image" />
+            <img src="img/Caramel-Cupcake.jpeg" alt="Caramel Cupcake" />
             <div class="rating">
               <span class="rating-text">5.0</span>
               <span class="star-icon">&#9733;</span>
@@ -73,7 +73,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Vanilla-Cupcake.webp" alt="Cupcake Image" />
+            <img src="img/Vanilla-Cupcake.webp" alt="Vanilla Cupcake" />
             <div class="rating">
               <span class="rating-text">4.9</span>
               <span class="star-icon">&#9733;</span>
@@ -97,7 +97,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Velvet-Cupcake.jpg" alt="Cupcake Image" />
+            <img src="img/Velvet-Cupcake.jpg" alt="Red Velvet Cupcake" />
             <div class="rating">
               <span class="rating-text">4.8</span>
               <span class="star-icon">&#9733;</span>
@@ -121,7 +121,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Oreo-Cupcake.webp:" alt="Cupcake Image" />
+            <img src="img/Oreo-Cupcake.webp" alt="cookies & Cream Cupcake" />
             <div class="rating">
               <span class="rating-text">4.8</span>
               <span class="star-icon">&#9733;</span>
