--- a/special.html
+++ b/special.html
@@ -45,7 +45,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Wedding.jpeg" />
+            <img src="img/Wedding.jpeg" alt="Wedding Cupcake" />
             <div class="rating">
               <span class="rating-text">5.0</span>
               <span class="star-icon">&#9733;</span>
@@ -69,7 +69,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Birthday.jpeg" />
+            <img src="img/Birthday.jpeg" alt="Birthday Cupcake" />
             <div class="rating">
               <span class="rating-text">5.0</span>
               <span class="star-icon">&#9733;</span>
@@ -93,7 +93,7 @@
       <div class="bestseller-cupcake">
         <div class="inside-cupcake">
           <div class="inside-image">
-            <img src="img/Anniversary.jpeg" />
+            <img src="img/Anniversary.jpeg" alt="Anniversary Cupcake" />
             <div class="rating">
               <span class="rating-text">5.0</span>
               <span class="star-icon">&#9733;</span>
