--- a/custom.html
+++ b/custom.html
@@ -20,10 +20,10 @@
           <a href="custom.html" class="text-header">Custom</a>
           <a href="aboutUs.html" class="text-header">About Us</a>
           <a href="cart.html" class="icon-header">
-            <img src="img/shopping-cart-icon.png" />
+            <img src="img/shopping-cart-icon.png" alt="Shopping Cart Icon" />
           </a>
           <a href="#" class="icon-header">
-            <img src="img/profile-icon.png" />
+            <img src="img/profile-icon.png" alt="Profile Icon" />
           </a>
         </div>
       </div>
