--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
     <div class="slideshow-container">
       <!-- Image 1 -->
       <div class="mySlides">
-        <img src="img/Index-Cupcake-Red.jpeg" alt="Desktop Image 1" />
+        <img src="img/Index-Header-Cupcake1.jpeg" alt="Desktop Image 1" />
       </div>
 
       <!-- Image 2 -->
       <div class="mySlides">
-        <img src="img/Index-Cupcake-Chocolate.webp" alt="Desktop Image 2" />
+        <img src="img/Index-Header-Cupcake2.jpg" alt="Desktop Image 2" />
       </div>
 
       <!-- Image 3 -->
       <div class="mySlides">
-        <img src="img/Index-Cupcake-3Cupcakes.jpg" alt="Desktop Image 3" />
+        <img src="img/Index-Header-Cupcake3.jpg" alt="Desktop Image 3" />
       </div>
     </div>
 
@@ -147,7 +147,7 @@
     <div class="fromus-box">
       <div class="fromus-content">
         <div class="fromus-image">
-          <img src="img/Sugar.jpg" alt="Low Sugar Ingredients" />
+          <img src="img/Low-Sugar.jpg" alt="Low Sugar Ingredients" />
           <div class="image-text">
             <p>Low Sugar Ingredients</p>
           </div>
@@ -155,7 +155,7 @@
       </div>
       <div class="fromus-content">
         <div class="fromus-image">
-          <img src="img/flour.jpg" alt="High Quality" />
+          <img src="img/High-Quality.jpg" alt="High Quality" />
           <div class="image-text">
             <p>High Quality</p>
           </div>
@@ -163,7 +163,7 @@
       </div>
       <div class="fromus-content">
         <div class="fromus-image">
-          <img src="img/egg.jpg" alt="Ethically Sourced" />
+          <img src="img/Ethically-Sourced.jpg" alt="Ethically Sourced" />
           <div class="image-text">
             <p>Ethically Sourced</p>
           </div>
