--- a/order.html
+++ b/order.html
@@ -135,7 +135,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html?cupcake-vanilla" class="order-now"
+              <a href="order.html?cupcake=vanilla" class="order-now"
                 >Order Now</a
               >
             </div>
