--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
     <title>Assignment 1</title>
   </head>
+  <div class="intro">
+    <h1 class="intro-logo-header">
+      <span class="intro-logo">Toron</span><span class="intro-logo">to.</span
+      ><br />
+    </h1>
+  </div>
   <body>
     <div class="box">
       <div class="rectangle">
