Profile.html  Creation

--- a/cupcake.html
+++ b/cupcake.html
@@ -21,7 +21,7 @@
           <a href="cart.html" class="icon-header">
             <img src="img/shopping-cart-icon.png" alt="Shopping Cart Icon" />
           </a>
-          <a href="#" class="icon-header">
+          <a href="profile.html" class="icon-header">
             <img src="img/profile-icon.png" alt="Profile Icon" />
           </a>
         </div>
