--- a/cart.html
+++ b/cart.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="cart.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/cart.css" />
 
     <title>Assignment 1</title>
   </head>
@@ -36,6 +36,6 @@
         <a href="#" class="checkout-button" id="checkoutButton">Checkout</a>
       </div>
     </div>
-    <script src="cart.js"></script>
+    <script src="js/cart.js"></script>
   </body>
 </html>
