--- a/custom.html
+++ b/custom.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/custom.css" />
 
     <title>Assignment 1</title>
   </head>
@@ -298,6 +298,6 @@
         </div>
       </div>
     </footer>
-    <script src="custom.js"></script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
