--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="profile.css" />
+    <link rel="stylesheet" href="css/profile.css" />
     <title>Login Page</title>
   </head>
 
@@ -71,6 +71,6 @@
       </div>
     </div>
 
-    <script src="profile.js"></script>
+    <script src="js/profile.js"></script>
   </body>
 </html>
