Back Arrow to index.html Update

--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    <a href="index.html" class="back-arrow"
+      ><i class="fas fa-arrow-left"></i
+    ></a>
     <div class="container" id="container">
       <div class="form-container sign-up">
         <form>
@@ -41,8 +44,12 @@
               ><i class="fa-brands fa-google-plus-g"></i
             ></a>
             <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-            <a href="#" class="icon"
+            <a href="https://github.com/Aiman-firas" class="icon"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/aiman-firas-02518025b/"
+              class="icon"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
           </div>
